--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,14 @@
   background: #a6ddf0;
   filter: blur(72px);
 }
+
+.Button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  color: white;
+  border-radius: 0.5rem;
+  background: var(--buttonBg);
+  transition: all 100ms ease-out;
+}
