--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   --photo: #4CB256;
   --video: #4A4EB7;
   --location: #EF5757;
---shedule: #E1AE4A;
+  --schedule: #E1AE4A;
 }
 
 .App {
@@ -39,4 +39,12 @@
   border-radius: 0.5rem;
   background: var(--buttonBg);
   transition: all 100ms ease-out;
+}
+
+.Button:hover {
+  width: 72px;
+  cursor: pointer;
+  color: orange;
+  background: transparent;
+  border: 2px solid var(--orange);
 }
