--- a/src/components/SharePost/SharePost.css
+++ b/src/components/SharePost/SharePost.css
@@ -55,3 +55,20 @@
     font-size: 12px;
 }
 
+.PreviewImage {
+    position: relative;
+}
+
+.PreviewImage>svg {
+    position: absolute;
+    cursor: pointer;
+    right: 0rem;
+}
+
+.PreviewImage>img {
+    width: 100%;
+    max-height: 20rem;
+    border-radius: 0.5rem;
+    object-fit: contain;
+    margin-top: 1.5rem;
+}
