--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -14,3 +14,13 @@
     width: 1.5rem;
     height: 1.5rem;
 }
+
+.Share {
+    height: 3rem;
+    width: 80%;
+    align-self: center;
+}
+
+.Share:hover {
+    width: 80%;
+}
